<resources>
    <string name="app_name">Mascara   INFO104</string>
    <string name="dialog_wait">Cargando</string>
    <string name="btnConsulta">Consultar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_evento">Eventos</string>
    <string name="title_cursos">Cursos</string>
    <string name="title_planificacion">Planificar</string>
    <string name="title_foro">Foro</string>
    <string name="title_material">Material</string>


    <string name="title_curso1">Geometría</string>
    <string name="title_activity_events_left_menu">EventsLeftMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nuevo_evento">NuevoEvento</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="nombre_del_evento">Nombre del Evento</string>
    <string name="descripci_n">Descripción</string>
    <string name="tags">Tags</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
</resources>
